foundations/flex/02-flex-header/style.css
.header  {
  font-family: monospace;
  background: papayawhip;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
}

.logo {
  font-size: 48px;
  font-weight: 900;
  color: tomato;
  background: white;
  padding: 4px 32px;
  order: 2;
}

ul {
  /* this removes the dots on the list items*/
  list-style-type: none;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 0px;
  padding: 0px;
}

ul li {
  padding: 10px;
}

a {
  font-size: 22px;
  background: white;
  padding: 8px;
  /* this removes the line under the links */
  text-decoration: none;
}

.left-links {
  order: 1;
}

.right-links {
  order: 3;
}

